# health-sensing

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml
.streamlit/: config.toml
config/: test_config.json
docs/: app_logic.md  assignment.md  install.md  student_functions.md
pages/: _shared_3afc_student.py  amplitude_threshold.py  angular_field_of_view.py  greyscale_resolution.py  pitch_frequency_range.py  pitch_threshold.py  smallest_noticeable_size.py  sound_gap_detection.py
tests/: conftest.py  test_adaptive_3afc.py  test_audio_tools.py  test_config_loader.py
utils/: adaptive_3afc.py  audio_tools.py  experiment_layout.py  home.py  navigation.py  test_config.py  three_afc.py  ui.py
