[project]
name = "healthsensing"
version = "0.1.0"
description = "Health Sensing Streamlit application"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.30",
    "protobuf==3.20.3",
    "watchdog",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "pep8-naming",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]
[tool.black]
target-version = ["py311"]
exclude = '''
/(\.git | \.cache | \.pytest_cache | venv | coverage)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = [".cache", ".pytest_cache", "venv", "coverage", ".git"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == '__main__':",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".venv", ".uv-cache", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
